# swagger_output.json
@@ -1440,7 +1440,14 @@
             }
           }
         ],
-        "responses": {}
+        "responses": {
+          "202": {
+            "description": "Accepted"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/procesos/agregarTutor": {
@@ -1460,7 +1467,14 @@
             }
           }
         ],
-        "responses": {}
+        "responses": {
+          "202": {
+            "description": "Accepted"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/procesos/agregarTransaccion": {
@@ -1480,7 +1494,38 @@
             }
           }
         ],
-        "responses": {}
+        "responses": {
+          "202": {
+            "description": "Accepted"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/procesos/crearConsentimiento": {
+      "post": {
+        "tags": [
+          "Procesos"
+        ],
+        "description": "Endpoint para agregar un consentimiento a un proceso de un usuario usuario.",
+        "parameters": [
+          {
+            "description": "description",
+            "in": "body",
+            "required": true,
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/ConsentimientoProceso"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          }
+        }
       }
     },
     "/servicios/{cod_servicio}": {
@@ -3392,6 +3437,22 @@
       },
       "xml": {
         "name": "Tutor"
+      }
+    },
+    "ConsentimientoProceso": {
+      "type": "object",
+      "properties": {
+        "documento_usuario": {
+          "type": "string",
+          "example": ""
+        },
+        "signature": {
+          "type": "string",
+          "example": "data:image/png;base64,"
+        }
+      },
+      "xml": {
+        "name": "ConsentimientoProceso"
       }
     }
   }
